till main product section

--- a/014_amazon/index.html
+++ b/014_amazon/index.html
@@ -259,6 +259,20 @@
         </ul>
       </div>
       <div class="product-container">
+        <div class="product-col-1">
+          <ul class="img-list">
+            <li><img src="./img/item/1.jpg" alt="" /></li>
+            <li><img src="./img/item/2.jpg" alt="" /></li>
+            <li><img src="./img/item/3.jpg" alt="" /></li>
+            <li><img src="./img/item/4.jpg" alt="" /></li>
+            <li><img src="./img/item/5.jpg" alt="" /></li>
+            <li><img src="./img/item/6.jpg" alt="" /></li>
+            <li><img src="./img/item/7.jpg" alt="" /></li>
+          </ul>
+          <div class="main-img">
+            <img src="./img/item/main.jpg" alt="" />
+          </div>
+        </div>
         <div class="product-col-2">
           <div class="product-col-2-row-1">
             <h1>
@@ -274,7 +288,7 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star-half-full checked"></span>
+                <span class="fa fa-star checked"></span>
               </span>
               <span class="rating-down">
                 <span class="fas fa-chevron-down"></span>
@@ -361,8 +375,93 @@
             <h5><a href="">Sign in/Create a free business account </a></h5>
           </div>
         </div>
-        <div class="product-col-2"></div>
-        <div class="product-col-3"></div>
+        <div style="margin-left: 20px;" class="product-col-3">
+          <div class="product-col-3-row-1 social-container">
+            <ul>
+              <li><a style="color: #6c7878;" href="">Share</a></li>
+              <li><i style="color: #6c7878;" class="far fa-envelope"></i></li>
+              <li>
+                <i style="color: #3b5998;" class="fab fa-facebook-square"></i>
+              </li>
+              <li><i style="color: #55acee;" class="fab fa-twitter"></i></li>
+              <li><i style="color: #bd081c;" class="fab fa-pinterest"></i></li>
+            </ul>
+          </div>
+          <div class="product-col-3-row-2">
+            <div class="quantity">
+              Quantity
+              <select name="" id="">
+                <option value="">1</option>
+                <option value="">2</option>
+                <option value="">3</option>
+                <option value="">4</option>
+                <option value="">5</option>
+                <option value="">6</option>
+                <option value="">7</option>
+                <option value="">8</option>
+                <option value="">9</option>
+                <option value="">10</option>
+                <option value="">11</option>
+                <option value="">12</option>
+                <option value="">13</option>
+                <option value="">14</option>
+                <option value="">15</option>
+                <option value="">16</option>
+                <option value="">17</option>
+                <option value="">18</option>
+                <option value="">19</option>
+                <option value="">20</option>
+              </select>
+            </div>
+            <div class="cart-buy-buttons">
+              <ul>
+                <li>
+                  <i class="fas fa-shopping-cart"></i>
+                  <span style="padding-left: 40px;">Add to Cart</span>
+                </li>
+                <li>
+                  <i class="fas fa-caret-right"></i>
+                  <span style="padding-left: 51px;">Buy Now</span>
+                </li>
+              </ul>
+            </div>
+            <div class="secure-location">
+              <ul>
+                <li>
+                  <i class="fas fa-lock"></i><a href="">Secure transaction</a>
+                </li>
+                <li>
+                  <i class="fas fa-map-marker-alt"></i
+                  ><a href="">Select Delivery Location</a>
+                </li>
+              </ul>
+            </div>
+            <button class="wish-list-btn">Add to Wish List</button>
+          </div>
+          <div class="product-col-3-row-3">
+            <ul>
+              <li>New (2) from</li>
+              <li><span>₹ 9,337.00</span> + ₹ 100.00</li>
+              <li>Shipping</li>
+            </ul>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+          <div class="product-col-3-row-4">
+            <h3>Other Sellers on Amazon</h3>
+            <div class="col-3-row-4-content">
+              <ul>
+                <li style="font-size: 18px; color: #b12704;">₹ 9,337.00</li>
+                <li style="font-size: 12px; color: #333;">
+                  + ₹ 100.00 Delivery charge
+                </li>
+                <li style="font-size: 12px; color: #333;">
+                  Sold by: <a href="">Cart2India Online</a>
+                </li>
+              </ul>
+              <button>Add to cart</button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <script src="app.js"></script>
