--- a/015_blooms/page2.html
+++ b/015_blooms/page2.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Hero section -->
     <section id="header" class="header">
-      <div class="main-nav">
+      <div id="main-nav" class="main-nav">
         <div class="container">
           <h1><a href="">Logo</a></h1>
           <nav>
