--- a/016_brad_html/0001_news_grid/index.html
+++ b/016_brad_html/0001_news_grid/index.html
@@ -18,7 +18,10 @@
   <body>
     <nav id="main-nav">
       <div class="container">
+        <!-- Nav logo -->
         <img src="./img/logo.png" alt="NewsGrid" class="logo" />
+
+        <!-- Social buttons -->
         <div class="social">
           <a href="https://facebook.com" target="_blank"
             ><i class="fab fa-facebook fa-2x"></i
@@ -33,6 +36,8 @@
             ><i class="fab fa-youtube fa-2x"></i
           ></a>
         </div>
+
+        <!-- Home and about buttons -->
         <ul>
           <li><a class="current" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
