--- a/016_brad_html/0001_news_grid/index.html
+++ b/016_brad_html/0001_news_grid/index.html
@@ -16,6 +16,7 @@
     <title>NewsGrid | Latest News</title>
   </head>
   <body>
+    <!-- Main nav bar -->
     <nav id="main-nav">
       <div class="container">
         <!-- Nav logo -->
@@ -44,5 +45,183 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Showcase -->
+    <header id="showcase">
+      <div class="container">
+        <div class="showcase-container">
+          <div class="showcase-content">
+            <div class="category category-sports">Sports</div>
+            <h1>Some Sports Article</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur, tempora. Voluptatibus eaque laudantium, distinctio
+              provident, necessitatibus officia aspernatur repellendus enim
+              recusandae non quod numquam corporis expedita odit beatae, error
+              omnis!
+            </p>
+            <a href="#article.html" class="btn btn-primary">Read More</a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Home articles -->
+    <section id="home-articles" class="py-2">
+      <div class="container">
+        <h2>Editor Picks</h2>
+        <div class="articles-container">
+          <article class="card">
+            <img src="./img/articles/ent1.jpg" alt="" />
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="./article.html"
+                  >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Atque, iure.</a
+                >
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+                facilis qui iure consequuntur ratione repellendus nesciunt
+                eveniet maxime minus quos!
+              </p>
+            </div>
+          </article>
+          <article class="card bg-dark">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="./article.html"
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+                iure.</a
+              >
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+              facilis qui iure consequuntur ratione repellendus nesciunt eveniet
+              maxime minus quos!
+            </p>
+          </article>
+          <article class="card">
+            <img src="./img/articles/tech1.jpg" alt="" />
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="./article.html"
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+                iure.</a
+              >
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+              facilis qui iure consequuntur ratione repellendus nesciunt eveniet
+              maxime minus quos!
+            </p>
+          </article>
+          <article class="card">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="./article.html"
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+                iure.</a
+              >
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+              facilis qui iure consequuntur ratione repellendus nesciunt eveniet
+              maxime minus quos!
+            </p>
+            <img src="./img/articles/sports1.jpg" alt="" />
+          </article>
+          <article class="card">
+            <img src="./img/articles/tech2.jpg" alt="" />
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="./article.html"
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+                iure.</a
+              >
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+              facilis qui iure consequuntur ratione repellendus nesciunt eveniet
+              maxime minus quos!
+            </p>
+          </article>
+          <article class="card bg-primary">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="./article.html"
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque,
+                iure.</a
+              >
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+              facilis qui iure consequuntur ratione repellendus nesciunt eveniet
+              maxime minus quos!
+            </p>
+          </article>
+          <article class="card">
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="./article.html"
+                  >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Atque, iure.</a
+                >
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas
+                facilis qui iure consequuntur ratione repellendus nesciunt
+                eveniet maxime minus quos!
+              </p>
+            </div>
+            <img src="./img/articles/ent2.jpg" alt="" />
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="main-footer" class="py-2">
+      <div class="container footer-container">
+        <div>
+          <img src="./img/logo_light.png" alt="NewsGrid" />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+            dolorum est architecto beatae, quidem fuga deleniti temporibus
+            mollitia quos praesentium!
+          </p>
+        </div>
+        <div>
+          <h3>Email Newsletter</h3>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          <form>
+            <input type="email" placeholder="Enter email" />
+            <input type="submit" value="Subscribe" class="btn btn-primary" />
+          </form>
+        </div>
+        <div>
+          <h3>Site Links</h3>
+          <ul class="list">
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Join Our Club</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+            laboriosam.
+          </p>
+          <a href="#" class="btn btn-secondary">Join Now</a>
+        </div>
+        <div>
+          <p>Copyright &copy; 2020 All Rights Reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
