--- a/017_brad_bootsrap/02_nn/jumbotrons.html
+++ b/017_brad_bootsrap/02_nn/jumbotrons.html
@@ -26,6 +26,12 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="jumbotron jumbotron-fluid" style="background: #aaa">
+      <div class="container">
+        <h1>Welcome to the Dojo</h1>
+        <p>A guiding light for the less enlightened</p>
+      </div>
+    </div>
     <div class="container">
       <div class="row" style="background: lightblue">
         <div class="col-md">col-md</div>
