--- a/019_css_challenges/008/index.html
+++ b/019_css_challenges/008/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row row-2">
         <div class="col">
           <h2 class="h--purple">Cheap</h2>
           <p>
