--- a/019_css_challenges/012/index.html
+++ b/019_css_challenges/012/index.html
@@ -54,5 +54,20 @@
         </div>
       </div>
     </div>
+    <div class="features features--brown features-reverse">
+      <div class="container">
+        <div class="features__text">
+          <h2>Made custom for you</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis
+            cum culpa numquam voluptatum. Repudiandae veniam neque fuga
+            perspiciatis rerum in, doloribus cum! Similique, dolores.
+          </p>
+        </div>
+        <div class="features__img">
+          <img src="./img/image-02.jpg" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
