--- a/022_bootstrap/001_netNinjaCrash/02_containers.html
+++ b/022_bootstrap/001_netNinjaCrash/02_containers.html
@@ -13,26 +13,18 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Containers</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <h2>This is a h2</h2>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut sunt
-      reprehenderit cupiditate commodi totam corporis dolorem sapiente
-      consectetur voluptas aliquid.
-    </p>
-    <ul>
-      <li>Potatoes</li>
-      <li>Onions</li>
-      <li>Chicken</li>
-    </ul>
-    <form>
-      <label>Text field</label>
-      <input type="text" placeholder="placeholder" />
-      <input type="submit" value="Click Me" />
-    </form>
+    <div class="container" style="background: skyblue">
+      <h1>Fixed Container</h1>
+    </div>
+
+    <div class="container-fluid" style="background: yellow">
+      <h1>Fluid Container</h1>
+    </div>
+
+    <!-- https://getbootstrap.com/docs/4.4/layout/overview/#responsive-breakpoints -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
