--- a/022_bootstrap/001_netNinjaCrash/03_grid.html
+++ b/022_bootstrap/001_netNinjaCrash/03_grid.html
@@ -20,7 +20,7 @@
       }
     </style>
 
-    <title>Grid System</title>
+    <title>Bootstrap Grid System</title>
   </head>
   <body>
     <div class="container">
