--- a/018_tests/00001_vonnue/index.html
+++ b/018_tests/00001_vonnue/index.html
@@ -53,8 +53,8 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Cupiditate, sit?
             </p>
           </div>
           <ul class="list-group list-group-flush">
